[package]
name = "rp2040-postcard-firmware"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
# Protocol definitions (no_std)
rflasher-postcard = { path = "../..", default-features = false, features = ["defmt"] }

# Embassy runtime
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.5", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.5", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-futures = "0.1"

# Postcard-RPC server
postcard-rpc = { version = "0.12", default-features = false, features = ["embassy-usb-0_5-server"] }
postcard = { version = "1.0", default-features = false }
postcard-schema = { version = "0.2", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = "0.8"

# Embedded basics
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Static allocation
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = 1

[build-dependencies]
# None needed

[[bin]]
name = "rp2040-postcard-firmware"
path = "src/main.rs"
